improve category selection and write quest info to current_session_data.json.

--- a/src/static/index2.html
+++ b/src/static/index2.html
@@ -15,10 +15,13 @@
     <div id="map"></div>
     <select id="category">
         <option value="Park">🏞️ Park</option>
-        <option value="History" selected>🏛️ History</option>
+        <option value="History">🏛️ History</option>
         <option value="Food">🍔 Food</option>
+        <option value="Cafe">☕ Cafe</option>
+        <option value="Landmark" selected>📍 Landmark</option>
     </select>
 
+    <button onclick="startSession(2000,4)">Apply Category</button>
     <script src="/static/app.js"></script>
 </body>
 
