Update heading text from 'Totem Pole' to 'Quest Location'

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -135,7 +135,7 @@
                 Current Objective
               </p>
               <h2 class="text-3xl font-bold tracking-tight mt-1 text-gray-900">
-                Find the <span class="text-indigo-600">Totem Pole</span>
+                Find the <span class="text-indigo-600">Quest Location</span>
               </h2>
             </div>
           </div>
